@@ -10,7 +10,7 @@
 #include <ctype.h>
 #include "common.h"
 
-char rgx_str[] = {"^(m*)(d?)(c{0,3})(l?)(x{0,3})(v?)(i{0,3})$"};
+char rgx_str[] = {"^(m*)(d?)(c{0,3})(l?)(x{0,3})((iv?)|((v?)(i{0,3})))$"};
 
 regex_t regex;
 byte rgxSts = 0;
